# hailo_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: EE484XMEVROSD.json  detector_params.yaml
include/hailo_detector/: detector_node.hpp
launch/: detector.launch.py
scripts/: detection_gui_node
src/: detector_node.cpp
